--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,5 @@
-TWITTER_BEARER=
 TWITTER_USERNAME=oliverradwell
+TWITTER_APP_CONSUMER_KEY=
+TWITTER_APP_CONSUMER_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_SECRET=
