Add documentation and promotion line

--- a/.env.dist
+++ b/.env.dist
@@ -3,4 +3,5 @@ TWITTER_APP_CONSUMER_KEY=
 TWITTER_APP_CONSUMER_SECRET=
 TWITTER_ACCESS_TOKEN=
 TWITTER_ACCESS_SECRET=
+PROMOTIONAL_LINE=https://git.io/JMOjc
 DEBUG=
