--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -4,14 +4,14 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [ "**" ]
+    branches: [ master ]
   schedule:
     - cron: "27 18 * * 0"
 
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     permissions:
       actions: read
       contents: read
