--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -64,4 +64,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.tag-determiner.outputs.tag-name }}
+        tags: ${{ env.REGISTRY }}/${{ github.repository }}:${{ steps.tag-determiner.outputs.tag-name }}
